2024-04-18T00:51:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8730701242 # 192
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-18
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 639 1101 / 643 1106
* notice: next accum: outdated-unq outdated-all / unq all: 639 1101 / 643 1107
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-17]

2024-04-17T08:14:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8718540744 # 190
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 639 1101 / 642 1105
* notice: next accum: outdated-unq outdated-all / unq all: 639 1101 / 643 1106
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-17]

2024-04-16T16:15:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8709004562 # 188
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-16
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 639 1101 / 642 1104
* notice: next accum: outdated-unq outdated-all / unq all: 639 1101 / 642 1105
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-16]

2024-04-16T08:14:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8702222788 # 187