@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-18T00:51:45Z",
+  "timestamp" : "2024-04-18T08:15:31Z",
   "count_outdated" : 1101,
   "uniques_outdated" : 639,
-  "count" : 1107,
-  "uniques" : 643,
+  "count" : 1108,
+  "uniques" : 644,
   "clones" : [
     {
       "timestamp": "2024-04-14T00:00:00Z",
@@ -37,6 +37,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
