@@ -1,5 +1,5 @@
 {
-  "count": 6,
+  "count": 7,
   "uniques": 3,
   "clones": [
     {
@@ -20,6 +20,11 @@
     {
       "timestamp": "2024-04-17T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-04-18T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
