@@ -1,3 +1,12 @@
+2024-04-18T08:15:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8734607757 # 193
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-18
+* notice: last 14d: unq all: 3 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 639 1101 / 643 1107
+* notice: next accum: outdated-unq outdated-all / unq all: 639 1101 / 644 1108
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-04-18]
+
 2024-04-18T00:51:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8730701242 # 192
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-18
